[package]
name = "ureq"
version = "2.3.1"
authors = ["Martin Algesten <martin@algesten.se>", "Jacob Hoffman-Andrews <ureq@hoffman-andrews.com>"]
description = "Simple, safe HTTP client"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/ureq"
readme = "README.md"
keywords = ["web", "request", "https", "http", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

[package.metadata.docs.rs]
# Keep in sync with .github/workflows/test.yml
features = [ "tls" ]

[features]
default = ["tls"]
tls = ["rustls", "webpki", "webpki-roots"]

[dependencies]
chunked_transfer = "1.2"
once_cell = "1"
rustls = { version = "0.20", optional = true }
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "0.22", optional = true }

io_uring = { path = "../../io_uring" }
dns-parser = "*"
memchr = "*"
arrayvec = "*"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
env_logger = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = { version = "0.2" }

[[example]]
name = "smoke-test"

[[example]]
name = "cureq"
required-features = ["charset", "cookies", "socks-proxy"]
