[package]
name = "ureq"
version = "2.3.1"
authors = ["Martin Algesten <martin@algesten.se>", "Jacob Hoffman-Andrews <ureq@hoffman-andrews.com>"]
description = "Simple, safe HTTP client"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/ureq"
readme = "README.md"
keywords = ["web", "request", "https", "http", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

[package.metadata.docs.rs]
# Keep in sync with .github/workflows/test.yml
features = [ "tls" ]

[features]
default = ["tls"]
tls = ["rustls", "webpki-roots"]

[dependencies]
chunked_transfer = "1.2"
once_cell = "1"
# Turn off logging and TLS12. Rustls supports TLS13 by default
rustls = { version = "*", optional = true, default-features= false, features = ["read_buf"]}
webpki-roots = { version = "*", optional = true }

dns-parser = "*"
